--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ daily test</li>
                     <div class="profile">
                     <img src="images/12.jpg" class="user">
                         <blockquote>ask any doubts regarding anything through whatsapp only.</blockquote>
-                        <h3>Samyak Surana<span>  founder af ss classes</span></h3>
+                        <h3>Samyak Surana<span>  founder of ss classes</span></h3>
                         
                     </div>
                     </div>
