--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Weekly test</li>
                     <div class ="col-md-3">
                     <div class="single-price">
                     <div class="price-head">
-                        <h2>Bussiness</h2>
+                        <h2>Business</h2>
                         <p>2500 rs/<span>month</span></p>
                         </div>
                     <div class="price-content">
